<resources>
    <string name="app_name">HFCalc</string>
    <string name="Resultado" />
    <string name="mMais">M+</string>
    <string name="mMenos">M-</string>
    <string name="mClean">MC</string>
    <string name="mShow">MS</string>
    <string name="btnClean">C</string>
    <string name="btnBack"><![CDATA[<-]]></string>
    <string name="btnDivide">/</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnMultiplicar">X</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnMenos">-</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnPlus">+</string>
    <string name="btn0">0</string>
    <string name="btnDot">.</string>
    <string name="btnEquals">=</string>
    <string name="eText1" />
    <string name="eText2" />
    <string name="memoriaMais">M+</string>
    <string name="btnPercentagem">%</string>
    <string name="btnMaisMenos">+/-</string>
    <string name="raiz">√</string>
    <string name="UmSobreX">1/X</string>
    <string name="btnMilhas">milhas</string>
    <string name="btnRadianos">rad</string>
    <string name="btnSeno">sin</string>
    <string name="btnCoseno">cos</string>
    <string name="btnTangente">tan</string>
    <string name="logaritmo">ln</string>
    <string name="btnExponencial">e</string>
</resources>
