<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helde.calculadoraihm.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mMais"
        android:id="@+id/button"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/eText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mMenos"
        android:id="@+id/button2"
        android:layout_alignBottom="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mClean"
        android:id="@+id/button3"
        android:layout_alignBottom="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mShow"
        android:id="@+id/button4"
        android:layout_alignTop="@+id/button3"
        android:layout_toRightOf="@+id/button3"
        android:layout_toEndOf="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClean"
        android:id="@+id/btnLimpar"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@id/button2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBack"
        android:id="@+id/btnApagarCaractere"
        android:layout_alignBottom="@+id/btnLimpar"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDivide"
        android:id="@+id/btnDivisao"
        android:layout_alignBottom="@+id/btnApagarCaractere"
        android:layout_toRightOf="@+id/btnApagarCaractere"
        android:layout_toEndOf="@+id/btnApagarCaractere" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn7"
        android:id="@+id/btnSete"
        android:layout_below="@+id/btnLimpar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn8"
        android:id="@+id/btnOito"
        android:layout_alignTop="@+id/btnSete"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn9"
        android:id="@+id/btnNove"
        android:layout_alignBottom="@+id/btnOito"
        android:layout_alignLeft="@+id/btnApagarCaractere"
        android:layout_alignStart="@+id/btnApagarCaractere" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMultiplicar"
        android:id="@+id/btnMutilicacao"
        android:layout_alignBottom="@+id/btnNove"
        android:layout_toRightOf="@+id/btnNove"
        android:layout_toEndOf="@+id/btnNove" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn4"
        android:id="@+id/btnQuatro"
        android:layout_below="@+id/btnSete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn5"
        android:id="@+id/btnCinco"
        android:layout_alignBottom="@+id/btnQuatro"
        android:layout_alignLeft="@+id/btnOito"
        android:layout_alignStart="@+id/btnOito" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn6"
        android:id="@+id/btnSeis"
        android:layout_alignBottom="@+id/btnCinco"
        android:layout_alignLeft="@+id/btnNove"
        android:layout_alignStart="@+id/btnNove" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMenos"
        android:id="@+id/btnSubtracao"
        android:layout_alignBottom="@+id/btnSeis"
        android:layout_toRightOf="@+id/btnSeis"
        android:layout_toEndOf="@+id/btnSeis" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:id="@+id/btnUm"
        android:layout_below="@+id/btnQuatro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        android:id="@+id/btnDois"
        android:layout_alignBottom="@+id/btnUm"
        android:layout_alignLeft="@+id/btnCinco"
        android:layout_alignStart="@+id/btnCinco" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3"
        android:id="@+id/btnTres"
        android:layout_alignBottom="@+id/btnDois"
        android:layout_alignLeft="@+id/btnSeis"
        android:layout_alignStart="@+id/btnSeis" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPlus"
        android:id="@+id/btnSoma"
        android:layout_alignBottom="@+id/btnTres"
        android:layout_toRightOf="@+id/btnTres"
        android:layout_toEndOf="@+id/btnTres" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn0"
        android:id="@+id/btnzero"
        android:layout_below="@+id/btnUm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDot"
        android:id="@+id/btnPonto"
        android:layout_alignBottom="@+id/btnzero"
        android:layout_alignLeft="@+id/btnDois"
        android:layout_alignStart="@+id/btnDois" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEquals"
        android:id="@+id/btnIgual"
        android:layout_alignBottom="@+id/btnPonto"
        android:layout_toRightOf="@+id/btnPonto"
        android:layout_toEndOf="@+id/btnPonto"
        android:layout_alignRight="@id/btnSoma"
        android:background="#4caf38" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/eText1"
        android:background="@android:color/transparent"
        android:editable="false"
        android:text="@string/eText1"
        android:gravity="right"
        android:textColor="#5b5b5b"
        android:textSize="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/eText2"
        android:layout_below="@+id/eText1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:background="@android:color/transparent"
        android:text="@string/eText2"
        android:editable="false"
        android:gravity="right"
        android:textColor="#5b5b5b"
        android:textSize="60dp" />

</RelativeLayout>
